--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "motion": "12.0.0-alpha.2",
