--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
+    "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
     "motion": "12.0.0-alpha.2",
-    "next": "15.0.3",
+    "next": "15.1.5",
+    "query-string": "^9.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
