--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
+    "luxon": "^3.5.0",
     "motion": "12.0.0-alpha.2",
     "next": "15.1.5",
     "query-string": "^9.1.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
