--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "query-string": "^9.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.54.2",
     "sass": "^1.82.0",
     "uuid": "^11.0.5",
@@ -47,5 +48,11 @@
     "typescript": "^5",
     "typescript-eslint": "^8.19.1",
     "url-loader": "^4.1.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "sharp"
+    ]
   }
 }
