--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noter-frontend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,43 +10,51 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@floating-ui/react": "^0.27.12",
     "@hookform/resolvers": "^3.10.0",
-    "@tanstack/react-query": "^5.64.2",
-    "axios": "^1.7.9",
+    "@tanstack/react-query": "^5.80.6",
+    "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
-    "luxon": "^3.5.0",
+    "luxon": "^3.6.1",
     "motion": "12.0.0-alpha.2",
-    "next": "15.1.5",
-    "query-string": "^9.1.1",
+    "next": "^15.2.3",
+    "query-string": "^9.2.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-google-recaptcha-v3": "^1.10.1",
-    "react-hook-form": "^7.54.2",
-    "sass": "^1.82.0",
-    "uuid": "^11.0.5",
+    "react-google-recaptcha-v3": "^1.11.0",
+    "react-hook-form": "^7.57.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "sass": "^1.89.1",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.28.0",
     "@svgr/webpack": "^8.1.0",
-    "@types/luxon": "^3.4.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/hast": "^3.0.4",
+    "@types/luxon": "^3.6.2",
+    "@types/mdast": "^4.0.4",
+    "@types/node": "^20.19.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/unist": "^3.0.3",
     "@types/uuid": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.3",
-    "globals": "^15.14.0",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "typescript-eslint": "^8.19.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^15.15.0",
+    "hast": "^1.0.0",
+    "postcss": "^8.5.4",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.1",
+    "unist-util-visit": "^5.0.0",
     "url-loader": "^4.1.1"
   },
   "pnpm": {
